--- a/index.html
+++ b/index.html
@@ -14,22 +14,57 @@
   <div class="container">
     <img src="images/logo.svg" alt="">
     <div class="main-section">
-    Bill
-    Select Tip %
-    5%
-    10%
-    15%
-    25%
-    50%
-    Custom
-    Number of People
-    Tip Amount
-    / person
-    Total
-    / person
-    Reset
+      <div class="column-one">
+        <div class="c1-gap">
+          <p>Bill</p>
+          <div class="input-img">
+            <img src="images/icon-dollar.svg" alt="">
+            <input type="number" min="0">
+          </div>
+        </div>
+        <div class="c1-gap">
+          <p>Select Tip %</p>
+          <div class="bt-tip-wrap">
+            <button class="bt-tip">5%</button>
+            <button class="bt-tip">10%</button>
+            <button class="bt-tip">15%</button>
+            <button class="bt-tip">25%</button>
+            <button class="bt-tip">50%</button>
+            <input type="number" min="0" class="input-custom" placeholder="Custom">
+          </div>
+        </div>
+        <div class="c1-gap">
+          <p>Number of People</p>
+          <div class="input-img">
+            <img src="images/icon-person.svg" alt="">
+            <input type="number" min="0">
+          </div>
+        </div>
+      </div>
+      <div class="column-two">
+        <div class="c2-wrap">
+          <div class="flex-row c2-line">
+            <div class="flex-column c2-txt">
+              <p>Tip Amount</p>
+              <p class="per-person">/ person</p>
+            </div>
+            <h1 class="price-total">$0.00</h1>
+          </div>
+          <div>
+            <div class="flex-row c2-line">
+              <div class="flex-column c2-txt">
+                <p>Total</p>
+                <p class="per-person">/ person</p>
+              </div>
+              <h1 class="price-total">$0.00</h1>
+            </div>
+          </div>
+        </div>
+        <button class="bt-reset">Reset</button>
+      </div>
+    </div>
   </div>
-</div>
-  <script src="script.js"></script>
+
+<script src="script.js"></script>
 </body>
 </html>
