--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <div class="main-section">
       <div class="column-one">
         <div class="c1-gap">
-          <p>Bill</p>
+          <p class="txt-clr">Bill</p>
           <div class="input-img">
             <img src="images/icon-dollar.svg" alt="">
-            <input type="number" min="0">
+            <input type="number" id="billAmount" class="max-input" min="0" max="10000" placeholder="0">
           </div>
         </div>
         <div class="c1-gap">
-          <p>Select Tip %</p>
+          <p class="txt-clr">Select Tip %</p>
           <div class="bt-tip-wrap">
             <button class="bt-tip">5%</button>
             <button class="bt-tip">10%</button>
             <button class="bt-tip">15%</button>
             <button class="bt-tip">25%</button>
             <button class="bt-tip">50%</button>
-            <input type="number" min="0" class="input-custom" placeholder="Custom">
+            <input type="number" id="customTip" min="0" max="1000" class="input-custom max-input" placeholder="Custom">
           </div>
         </div>
         <div class="c1-gap">
-          <p>Number of People</p>
+          <p class="txt-clr">Number of People</p>
           <div class="input-img">
             <img src="images/icon-person.svg" alt="">
-            <input type="number" min="0">
+            <input type="number" id="numPeople" class="max-input" min="1" max="100" placeholder="1">
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
               <p>Tip Amount</p>
               <p class="per-person">/ person</p>
             </div>
-            <h1 class="price-total">$0.00</h1>
+            <h1 class="price-total" id="tipAmountPerPerson">$0.00</h1>
           </div>
           <div>
             <div class="flex-row c2-line">
@@ -56,7 +56,7 @@
                 <p>Total</p>
                 <p class="per-person">/ person</p>
               </div>
-              <h1 class="price-total">$0.00</h1>
+              <h1 class="price-total" id="totalAmountPerPerson">$0.00</h1>
             </div>
           </div>
         </div>
